k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
      - name: mysql

        image: mysql:8  

        ports:
        - containerPort: 3306

        volumeMounts:
        - name: mysql-initdb-volume
          mountPath: /docker-entrypoint-initdb.d
   
      volumes:
      - name: mysql-initdb-volume
        configMap:
          name: mysql-initdb-config
