k8s/product-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
      - name: product-service

        image: product-service:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 8082

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
