k8s/user-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service
    
    spec:
      containers:
      - name: user-service

        image: user-service:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 8081

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
