k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: microservices-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /user
        pathType: Prefix

        backend:
          service:
            name: user-service
            port:
              number: 8081

      - path: /product
        pathType: Prefix

        backend:
          service:
            name: product-service
            port:
              number: 8082
